base-istio.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: test-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - svc-test-app.demo-one.svc.cluster.local
    - svc-test-app.demo-two.svc.cluster.local
    - keycloak.keycloak.svc.cluster.local
    port:
      name: http
      number: 80
      protocol: HTTP
