demo-two.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-two
  labels:
    istio-injection: enabled

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-demo-two
  namespace: default
spec:
  gateways: ['test-gateway']
  hosts: ['svc-test-app.demo-two.svc.cluster.local']
  http:
  - match:
    - uri:
        prefix: /demo-two
    route:
    - destination:
        host: svc-test-app.demo-two.svc.cluster.local
        port:
          number: 8880

---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: sso-configuration
  namespace: demo-two
spec:
  selector:
    matchLabels:
      app: test-app
  jwtRules:
  - issuer: http://keycloak.keycloak.svc.cluster.local:8080/auth/realms/test-istio
    jwksUri: http://keycloak.keycloak.svc.cluster.local:8080/auth/realms/test-istio/protocol/openid-connect/certs
    forwardOriginalToken: true

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: service-rbac-policies
  namespace: demo-two
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: test-app
  rules:
  - when:
    - key: request.auth.claims[roles]
      values:
      - istio-resource-writer

---
apiVersion: v1
kind: Service
metadata:
  name: svc-test-app
  namespace: demo-two
spec:
  selector:
    app: test-app
  ports:
  - name: http-svc
    port: 8880
    targetPort: 8880
    protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-test-app
  namespace: demo-two
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
        group: test-app
        version: latest
    spec:
      containers:
      - name: test-app
        image: docker.io/revl/test-app:1.0.0
        imagePullPolicy: Always
        ports:
        - name: http-svc
          containerPort: 8880
